--- a/app/src/main/res/layout/dailog_delete_layout.xml
+++ b/app/src/main/res/layout/dailog_delete_layout.xml
@@ -11,6 +11,7 @@
         android:background="@drawable/dailog_bg_top">
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
