--- a/app/src/main/res/layout/activity_caretaker_home.xml
+++ b/app/src/main/res/layout/activity_caretaker_home.xml
@@ -31,7 +31,7 @@
             android:id="@+id/lyContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar">
+            android:layout_below="@+id/coordinateLay">
 
             <FrameLayout
                 android:id="@+id/framlayout"
