--- a/app/src/main/res/layout/navigation_list_layout.xml
+++ b/app/src/main/res/layout/navigation_list_layout.xml
@@ -39,13 +39,16 @@
                 android:visibility="gone" />
 
             <TextView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:id="@+id/tv_for_messageCount"
+                android:layout_width="@dimen/_22sdp"
+                android:layout_height="@dimen/_22sdp"
                 android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/_20sdp"
                 android:background="@drawable/circle_notificatioan_bg"
+                android:gravity="center"
+                android:maxLength="2"
                 android:padding="@dimen/_2sdp"
-                android:text="25"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12ssp"
                 android:visibility="gone" />
